# mxtoai-core

./: .coveragerc  .env.example  GITHUB_MCP_INTEGRATION_SUMMARY.md  README.md  mcp.toml.example  pyproject.toml  test_github_mcp_simple.py
docusaurus-site/: package-lock.json
mxtoai/: email_handles.py  routed_litellm_model.py  tasks.py
mxtoai/agents/: email_agent.py
mxtoai/scripts/: run_workers.py
scripts/: setup-local.sh
tests/: test_process_email.py  test_routed_litellm_model.py
